--- a/upright_cmd/config/demos/panda_demo.yaml
+++ b/upright_cmd/config/demos/panda_demo.yaml
@@ -16,7 +16,7 @@ logging:
   log_dir: /root/.logs
 
 simulation:
-  duration: 5.0
+  duration: 10.0
   arrangement: nothing
 
   static_obstacles:
@@ -44,44 +44,58 @@ controller:
     minimum_distance: 0.02
     
     collision_pairs:
-      - ["panda_link5_0", "sphere_1_0"]
-      - ["panda_link5_1", "sphere_1_0"]
-      - ["panda_link5_2", "sphere_1_0"]
-      - ["panda_link5_3", "sphere_1_0"]
-      - ["panda_link5_4", "sphere_1_0"]
-      - ["panda_link5_5", "sphere_1_0"]
+      - ["panda_link4_0", "sphere_1_0"]
       - ["panda_link6_0", "sphere_1_0"]
-      - ["panda_link6_1", "sphere_1_0"]
-      - ["panda_link6_2", "sphere_1_0"]
       - ["panda_link7_0", "sphere_1_0"]
-      - ["panda_link7_1", "sphere_1_0"]
-      - ["panda_link7_2", "sphere_1_0"]
 
-      # - ["panda_link5_0", "sphere_2_0"]
-      # - ["panda_link5_1", "sphere_2_0"]
-      # - ["panda_link5_2", "sphere_2_0"]
-      # - ["panda_link5_3", "sphere_2_0"]
-      # - ["panda_link5_4", "sphere_2_0"]
-      # - ["panda_link5_5", "sphere_2_0"]
-      # - ["panda_link6_0", "sphere_2_0"]
-      # - ["panda_link6_1", "sphere_2_0"]
-      # - ["panda_link6_2", "sphere_2_0"]
-      # - ["panda_link7_0", "sphere_2_0"]
-      # - ["panda_link7_1", "sphere_2_0"]
-      # - ["panda_link7_2", "sphere_2_0"]
+      - ["panda_link4_0", "sphere_2_0"]
+      - ["panda_link6_0", "sphere_2_0"]
+      - ["panda_link7_0", "sphere_2_0"]
+
+      - ["panda_link4_0", "sphere_3_0"]
+      - ["panda_link6_0", "sphere_3_0"]
+      - ["panda_link7_0", "sphere_3_0"]
+
+    # Use with panda_capsules.urdf.xacro
+    # collision_pairs:
+    #   - ["panda_link5_0", "sphere_1_0"]
+    #   - ["panda_link5_1", "sphere_1_0"]
+    #   - ["panda_link5_2", "sphere_1_0"]
+    #   - ["panda_link5_3", "sphere_1_0"]
+    #   - ["panda_link5_4", "sphere_1_0"]
+    #   - ["panda_link5_5", "sphere_1_0"]
+    #   - ["panda_link6_0", "sphere_1_0"]
+    #   - ["panda_link6_1", "sphere_1_0"]
+    #   - ["panda_link6_2", "sphere_1_0"]
+    #   - ["panda_link7_0", "sphere_1_0"]
+    #   - ["panda_link7_1", "sphere_1_0"]
+    #   - ["panda_link7_2", "sphere_1_0"]
+
+    #   - ["panda_link5_0", "sphere_2_0"]
+    #   - ["panda_link5_1", "sphere_2_0"]
+    #   - ["panda_link5_2", "sphere_2_0"]
+    #   - ["panda_link5_3", "sphere_2_0"]
+    #   - ["panda_link5_4", "sphere_2_0"]
+    #   - ["panda_link5_5", "sphere_2_0"]
+    #   - ["panda_link6_0", "sphere_2_0"]
+    #   - ["panda_link6_1", "sphere_2_0"]
+    #   - ["panda_link6_2", "sphere_2_0"]
+    #   - ["panda_link7_0", "sphere_2_0"]
+    #   - ["panda_link7_1", "sphere_2_0"]
+    #   - ["panda_link7_2", "sphere_2_0"]
       
-      # - ["panda_link5_0", "sphere_3_0"]
-      # - ["panda_link5_1", "sphere_3_0"]
-      # - ["panda_link5_2", "sphere_3_0"]
-      # - ["panda_link5_3", "sphere_3_0"]
-      # - ["panda_link5_4", "sphere_3_0"]
-      # - ["panda_link5_5", "sphere_3_0"]
-      # - ["panda_link6_0", "sphere_3_0"]
-      # - ["panda_link6_1", "sphere_3_0"]
-      # - ["panda_link6_2", "sphere_3_0"]
-      # - ["panda_link7_0", "sphere_3_0"]
-      # - ["panda_link7_1", "sphere_3_0"]
-      # - ["panda_link7_2", "sphere_3_0"]
+    #   - ["panda_link5_0", "sphere_3_0"]
+    #   - ["panda_link5_1", "sphere_3_0"]
+    #   - ["panda_link5_2", "sphere_3_0"]
+    #   - ["panda_link5_3", "sphere_3_0"]
+    #   - ["panda_link5_4", "sphere_3_0"]
+    #   - ["panda_link5_5", "sphere_3_0"]
+    #   - ["panda_link6_0", "sphere_3_0"]
+    #   - ["panda_link6_1", "sphere_3_0"]
+    #   - ["panda_link6_2", "sphere_3_0"]
+    #   - ["panda_link7_0", "sphere_3_0"]
+    #   - ["panda_link7_1", "sphere_3_0"]
+    #   - ["panda_link7_2", "sphere_3_0"]
 
     urdf:
       package: "upright_assets"
