--- a/upright_cmd/config/robots/panda.yaml
+++ b/upright_cmd/config/robots/panda.yaml
@@ -29,8 +29,8 @@ simulation:
     base_type: fixed
     urdf:
       package: "upright_assets"
-      path: "thing/urdf/panda_capsules.urdf"
-      includes: ["$(find upright_assets)/thing/xacro/panda_capsules.urdf.xacro"]
+      path: "thing/urdf/panda.urdf"
+      includes: ["$(find upright_assets)/thing/xacro/panda_spheres.urdf.xacro"]
 
 controller:
   robot:
@@ -43,8 +43,8 @@ controller:
     base_pose: [0, 0, 0]
     urdf:
       package: "upright_assets"
-      path: "thing/urdf/panda_capsules.urdf"
-      includes: ["$(find upright_assets)/thing/xacro/panda_capsules.urdf.xacro"]
+      path: "thing/urdf/panda.urdf"
+      includes: ["$(find upright_assets)/thing/xacro/panda_spheres.urdf.xacro"]
     tool_link_name: "panda_link8"
     base_type: fixed
 
@@ -56,7 +56,7 @@ controller:
       scale: 0.01
       diag: [0rep7, 10rep7, 1rep7]
     end_effector:
-      scale: 1
+      scale: 0.1
       diag: [1, 1, 1, 1, 1, 1]
 
   limits:
