--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.analysis.extraPaths": [
-        "/ws/devel/lib/python3/dist-packages",
-        "/ws/src/upright/upright_core/src",
-        "/ws/src/mobile_manipulation_central/src"
+        "${HOME}/ws/devel/lib/python3/dist-packages",
+        "${HOME}/ws/src/upright/upright_core/src",
+        "${HOME}/ws/src/mobile_manipulation_central/src"
     ]
 }
